--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,9 +29,21 @@ jobs:
       env:
         CI: true
         
+  update-release:
+    name: Update Release Tag
+    needs: build
+    runs-on: ubuntu-latest
+    steps: 
+    - name: Checkout repository
+      uses: actions/checkout@master
+    - name: Run latest-tag
+      uses: EndBug/latest-tag@latest
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this line unchanged
+        
   release:
     name: Release
-    needs: build
+    needs: update-release
     runs-on: windows-latest
     
     strategy:
