--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,8 +29,8 @@ jobs:
       env:
         CI: true
         
-  generate-release:
-    name: Update Release Tag
+  generate-latest:
+    name: Update Latest Release
     needs: build
     runs-on: ubuntu-latest
     steps: 
@@ -40,10 +40,11 @@ jobs:
       uses: EndBug/latest-tag@latest
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this line unchanged
+      
         
   release:
     name: Release
-    needs: generate-release
+    needs: generate-latest
     runs-on: windows-latest
     
     strategy:
@@ -65,7 +66,7 @@ jobs:
     - name: Package releases
       run: |
         7z a dist/flashpoint-launcher-${{ matrix.arch }}.zip ./dist/*/*
-    - name: Upload binaries to release
+    - name: Upload binaries to latest release
       uses: svenstaro/upload-release-action@v1-release
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
@@ -73,4 +74,11 @@ jobs:
         asset_name: flashpoint-launcher-${{ matrix.arch }}.zip
         tag: latest
         overwrite: true
+    - name: Upload binaries to tagged release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+          files: dist/flashpoint-launcher-${{ matrix.arch }}.zip
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
