--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -2,8 +2,8 @@ name: Build and Release Status
 
 on:
   push:
-    branches:
-      - master
+    tags:
+      - 'v*'
 
 jobs:
   build:
@@ -22,10 +22,10 @@ jobs:
         auth_header="$(git config --local --get http.https://github.com/.extraheader)"
         git submodule sync --recursive
         git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
-    - name: Use Node.js 12.x
+    - name: Use Node.js 14.x
       uses: actions/setup-node@v1
       with:
-        node-version: 12.x
+        node-version: 14.x
     - name: npm install
       run: npm install
       env:
@@ -42,10 +42,17 @@ jobs:
     steps: 
     - name: Checkout repository
       uses: actions/checkout@master
-    - name: Create new latest
-      uses: EndBug/latest-tag@latest
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this line unchanged
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Latest Release ${{ github.ref }}
+        body: Draft from commit ${{ github.ref }}
+        draft: false
+        prerelease: false
       
         
   release:
@@ -65,10 +72,10 @@ jobs:
         auth_header="$(git config --local --get http.https://github.com/.extraheader)"
         git submodule sync --recursive
         git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
-    - name: Use Node.js 12.x
+    - name: Use Node.js 14.x
       uses: actions/setup-node@v1
       with:
-        node-version: 12.x
+        node-version: 14.x
     - name: npm install
       run: npm install
       env:
