--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -3,41 +3,11 @@ name: Build and Release Status
 on:
   push:
     tags:
-      - 'v*'
+      - '*'
 
-jobs:
-  build:
-    name: Build
-    runs-on: ${{ matrix.os }}
-    
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Checkout submodules
-      shell: bash
-      run: |
-        auth_header="$(git config --local --get http.https://github.com/.extraheader)"
-        git submodule sync --recursive
-        git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
-    - name: Use Node.js 14.x
-      uses: actions/setup-node@v1
-      with:
-        node-version: 14.x
-    - name: npm install
-      run: npm install
-      env:
-        CI: true
-    - name: npm build
-      run: npm run build --if-present
-      env:
-        CI: true
-        
-  generate-latest:
-    name: Update Latest Release
-    needs: build
+jobs:   
+  tag-release:
+    name: Create Draft Release
     runs-on: ubuntu-latest
     steps: 
     - name: Checkout repository
@@ -51,13 +21,12 @@ jobs:
         tag_name: ${{ github.ref }}
         release_name: Latest Release ${{ github.ref }}
         body: Draft from commit ${{ github.ref }}
-        draft: false
+        draft: true
         prerelease: false
       
         
   release:
     name: Release
-    needs: generate-latest
     runs-on: ${{ matrix.os }}
     
     strategy:
@@ -100,7 +69,7 @@ jobs:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: dist/flashpoint-launcher_${{ matrix.os }}.zip
         asset_name: flashpoint-launcher_${{ matrix.os }}.zip
-        tag: latest
+        tag: ${{ github.ref }}
         overwrite: true
     - name: Upload setup to latest release
       if: matrix.os == 'windows-latest'
@@ -109,5 +78,5 @@ jobs:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: dist/FP_Win32_Setup.exe
         asset_name: FP_Win32_Setup.exe
-        tag: latest
+        tag: ${{ github.ref }}
         overwrite: true
