--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -2,29 +2,10 @@ name: Release Status
 
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - master
 
-jobs:   
-  tag-release:
-    name: Create Draft Release
-    runs-on: ubuntu-latest
-    steps: 
-    - name: Checkout repository
-      uses: actions/checkout@master
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Latest Release ${{ github.ref }}
-        body: Draft from commit ${{ github.ref }}
-        draft: true
-        prerelease: false
-      
-        
+jobs:
   release:
     name: Release
     runs-on: ${{ matrix.os }}
