--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -31,7 +31,7 @@ jobs:
       env:
         CI: true
     - name: Build and Publish 
-      run: npm run pulihs
+      run: npm run publish
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         EP_DRAFT: true
