--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -26,8 +26,15 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 14.x
+    - uses: actions/cache@v2
+      id: cache
+      with:
+        path: | 
+          **/node_modules
+        key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
     - name: Install Dependencies
       run: npm install
+      if: steps.cache.outputs.cache-hit != 'true'
       env:
         CI: true
     - name: Build and Publish 
