--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         path: | 
           **/node_modules
-        key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
+        key: ${{ runner.os }}-${{ hashFiles('package.json') }}
     - name: Install Dependencies
       run: npm install
       if: steps.cache.outputs.cache-hit != 'true'
