--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "publish:all": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:all\"",
     "postinstall": "electron-builder install-app-deps"
   },
-  "author": "Jesper Gustafsson",
+  "author": {
+    "name": "Jesper Gustafsson",
+    "email": "jespergustafssons@gmail.com"
+  },
   "license": "MIT",
   "dependencies": {
     "axios": "0.19.2",
