--- a/package.json
+++ b/package.json
@@ -17,16 +17,11 @@
     "pack:win32": "cross-env PACK_PLATFORM=win32 PACK_ARCH=ia32 gulp pack",
     "pack:darwin": "cross-env PACK_PLATFORM=darwin PACK_ARCH=x64 gulp pack",
     "pack:all": "cross-env PACK_PLATFORM=all PACK_ARCH=all gulp pack",
-    "release": "cross-env-shell NODE_ENV=production \"npm run build && npm run pack\"",
-    "release:linux": "cross-env-shell NODE_ENV=production \"npm run build && npm run pack:linux\"",
-    "release:win32": "cross-env-shell NODE_ENV=production \"npm run build && npm run pack:win32\"",
-    "release:darwin": "cross-env-shell NODE_ENV=production \"npm run build && npm run pack:darwin\"",
-    "release:all": "cross-env-shell NODE_ENV=production \"npm run build && npm run pack:all\"",
-    "publish": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack\"",
-    "publish:linux": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:linux\"",
-    "publish:win32": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:win32\"",
-    "publish:darwin": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:darwin\"",
-    "publish:all": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:all\"",
+    "release": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack\"",
+    "release:linux": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:linux\"",
+    "release:win32": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:win32\"",
+    "release:darwin": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:darwin\"",
+    "release:all": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:all\"",
     "postinstall": "electron-builder install-app-deps"
   },
   "author": {
