--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -37,8 +37,8 @@ jobs:
       if: steps.cache.outputs.cache-hit != 'true'
       env:
         CI: true
-    - name: Build and Publish 
-      run: npm run publish
+    - name: Build and Release 
+      run: npm run release
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         EP_DRAFT: true
